--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = pkgconfig/mpiexamplelib.pc
 
 src_main_c = src/main.c src/calculate.c
-src_main_h = src/calculate.h
+src_main_h = src/calculate_func.h
 
 src/calculate.tangled: $(abs_top_builddir)/org/calculate.org
 	top_builddir=$(abs_top_builddir) srcdir=$(abs_srcdir) $(top_builddir)/tools/missing bash $(top_builddir)/tools/tangle.sh $(top_srcdir)/org/calculate.org
@@ -17,9 +17,9 @@ src/calculate.tangled: $(abs_top_builddir)/org/calculate.org
 src/main.tangled: $(abs_top_builddir)/org/main.org 
 	top_builddir=$(abs_top_builddir) srcdir=$(abs_srcdir) $(top_builddir)/tools/missing bash $(top_builddir)/tools/tangle.sh $(top_srcdir)/org/main.org
 
-src/main.c: src/main.tangled src/calculate.c src/calculate.h
+src/main.c: src/main.tangled src/calculate.c src/calculate_func.h
 src/calculate.c: src/calculate.tangled
-src/calculate.h: src/calculate.tangled
+src/calculate_func.h: src/calculate.tangled
 
 bin_PROGRAMS = mpiexample
 mpiexample_SOURCES = $(src_main_c) $(src_main_h)
